// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllUrlsFromDocsConfig > no-version-no-tabs > gets all urls from docs config 1`] = `
[
  "docs/api/section-1/page-1",
  "docs/api/page-2",
  "docs/api/section-2",
  "docs/api/section-2/page-4",
  "docs/api/page-5",
  "docs/api/page-6",
]
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for / 1`] = `
{
  "redirect": "docs/api/section-1/page-1",
  "type": "notFound",
}
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs 1`] = `
{
  "redirect": "docs/api/section-1/page-1",
  "type": "notFound",
}
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/page-6 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.section-3.page-6",
  "pageId": "page-6.md",
  "slug": "docs/api/page-6",
  "title": "Page 6",
  "type": "page",
}
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/page-6 2`] = `undefined`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/page-6 3`] = `undefined`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/section-1 1`] = `
{
  "redirect": "docs/api/section-1/page-1",
  "type": "redirect",
}
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/section-2 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.section-2.page-3",
  "pageId": "page-3.md",
  "slug": "docs/api/section-2",
  "title": "Page 3",
  "type": "page",
}
`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/section-2 2`] = `undefined`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/section-2 3`] = `undefined`;

exports[`getNavigationRoot > no-version-no-tabs > gets navigation root for /docs/api/section-3 1`] = `
{
  "redirect": "docs/api/section-1/page-1",
  "type": "notFound",
}
`;
